[package]
name = "instrument-bench"
version = "0.1.0"
authors = ["Imbris <imbrisf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test_env_logger = [] 
test_tracing_subscriber = [] 

[dependencies.tracing]
version = "0.1.25"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.2.16"
features = ["fmt"]

[dependencies.log]
version = "0.4.14"

[dependencies.env_logger]
version = "0.8.3"

[dependencies.tracing-tracy]
version = "0.6.0"

[dependencies.tracy-client]
version = "0.12.0"

[dev-dependencies]
criterion = "0.3.4"

[lib]
bench = false

[[bench]]
name = "env_logger"
harness = false

[[bench]]
name = "tracing_subscriber"
harness = false

[[bench]]
name = "tracing_tracy"
harness = false

[[bench]]
name = "tracy_client"
harness = false
